--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <div class="gallery-grid">
             <img src="hair.jpg" alt="Hair Styling">
             <img src="makeup.jpg" alt="Makeup">
-            <img src="facial.jpg" alt="Facial">
-            <img src="bridal.jpg" alt="Bridal Makeup">
+            <img src="Facial.jpg" alt="Facial">
+            <img src="Bridal.jpg" alt="Bridal Makeup">
         </div>
     </section>
 
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
